--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.lizheblogs.android.template"
@@ -11,10 +11,30 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    signingConfigs {
+        release {
+            keyAlias 'lizheblogs'
+            keyPassword 'C&#GR7qSOghqNI6w'
+            storeFile file('/template_release.jks')
+            storePassword 'gT%y74cT$vewhuUx'
+        }
+        debug {
+            keyAlias 'lizheblogs'
+            keyPassword 'u&U!lYAnuj0R39&Q'
+            storeFile file('/template_debug.jks')
+            storePassword 'kXh@k8PROakXLVuW'
+        }
+    }
     buildTypes {
         release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
         applicationVariants.all { variant ->
             variant.outputs.each { output ->
@@ -45,7 +65,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
     //git clone https://android.googlesource.com/platform/frameworks/volley
     compile project(':volley')
     //http://square.github.io/picasso/
